# Shrily

Documents/SHRILY/: .env.example  .gitignore  .pre-commit-config.yaml  BRANDPILOT_MASTER_AUDIT.md  Makefile  README.md  alembic.ini  pyproject.toml
Documents/SHRILY/.github/workflows/: ci.yml
Documents/SHRILY/core/: models.py
Documents/SHRILY/core/services/: __init__.py  order_service.py  qr_service.py  sms_service.py  stripe_service.py
Documents/SHRILY/docs/: 50-point-production-checklist.md  DEPLOY.md  MASTER_AUDIT_REPORT.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_UNDERSTANDING_REPORT.md  README.md
Documents/SHRILY/frontend/: .env.local  AUDIT_NAVIGATION.md  DIASPORAGIFT_SPEC.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Documents/SHRILY/frontend/.next/: app-build-manifest.json  trace
Documents/SHRILY/frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
Documents/SHRILY/frontend/app/: globals.css  layout.tsx  page.tsx
Documents/SHRILY/frontend/app/checkout/: page.tsx
Documents/SHRILY/frontend/app/comment-ca-marche/: page.tsx
Documents/SHRILY/frontend/app/connexion/: page.tsx
Documents/SHRILY/frontend/app/dashboard/: page.tsx
Documents/SHRILY/frontend/app/inscription/: page.tsx
Documents/SHRILY/frontend/app/marketplace/: page.tsx
Documents/SHRILY/frontend/app/merchants/: page.tsx
Documents/SHRILY/frontend/components/: CartContext.tsx  Footer.tsx  MainMenu.tsx  Navbar.tsx  Notifications.tsx  OrderHistory.tsx  OrdersList.tsx  QRValidation.tsx  StickyCart.tsx
Documents/SHRILY/infrastructure/db/: __init__.py  base.py
Documents/SHRILY/infrastructure/repositories/: __init__.py  merchant_repo.py  order_repo.py  user_repo.py
Documents/SHRILY/mon_projet/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  shrily_dev.db  test.db
Documents/SHRILY/mon_projet/.github/workflows/: ci.yml
Documents/SHRILY/mon_projet/config/: .env.example
Documents/SHRILY/mon_projet/docs/architecture/: ADR-001-structure-projet.md
Documents/SHRILY/mon_projet/scripts/: backup.py  deploy.sh  seed_data.py
Documents/SHRILY/mon_projet/tests/: conftest.py
Documents/SHRILY/scripts/alembic/: env.py  script.py.mako
Documents/SHRILY/tests/integration/: test_orders_api.py
Documents/SHRILY/tests/unit/: test_order_service.py  test_qr_service.py
Documents/USURP/: docker-compose.yml  (+3 more)
(+139 files in other folders)
