[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
