
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-projet"
version = "0.1.0"
description = "Description courte et précise du projet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name = "Votre Nom", email = "email@example.com"},
]
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-cov>=4.1.0",
	"pytest-asyncio>=0.21.0",
	"black>=24.4.0",
	"ruff>=0.4.0",
	"mypy>=1.9.0",
	"pre-commit>=3.5.0",
	"types-requests",
	"types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── Black ─────────────────────────────
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
extend-exclude = '''
/(migrations|__pycache__)/
'''

# ── Ruff ──────────────────────────────
[tool.ruff]
line-length = 88
exclude = ["__pycache__", "*.pyc", ".git", "venv", ".venv", "dist", "build"]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "UP"]
ignore = ["E501", "B008"]
[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ──────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/"]
exclude = ["tests/", "scripts/", "venv/"]

# ── Pytest ────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
	"-v",
	"--tb=short",
	"--cov=src",
	"--cov-report=term-missing",
	"--cov-fail-under=70",
]
